update proj
